--- a/style.css
+++ b/style.css
@@ -69,11 +69,11 @@ nav ul li .dropdown li a:hover {
     background-color: #575757;
 }
 
-/* Sub-Sub Dropdown (hidden by default, shows on hover of parent) */
-nav ul li .dropdown-sub {
-    display: none;
+/* Sub-Sub Dropdown - Hidden until hover on parent subcategory */
+nav ul li .dropdown li:hover .dropdown-sub {
+    display: block;
     position: absolute;
-    left: 200px; /* Adjust if necessary */
+    left: 200px; /* Adjust if needed */
     top: 0;
     background-color: #333;
     list-style-type: none;
@@ -82,8 +82,8 @@ nav ul li .dropdown-sub {
     width: 200px;
 }
 
-nav ul li .dropdown li:hover .dropdown-sub {
-    display: block;
+nav ul li .dropdown-sub {
+    display: none;
 }
 
 nav ul li .dropdown-sub li a {
