--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ nav {
 }
 
 nav .logo a {
-    color: #f1f1f1; /* white */
+    color: #f1f1f1; /* White */
     text-decoration: none;
     font-size: 1.5em;
 }
@@ -40,12 +40,12 @@ nav ul {
 }
 
 nav ul li {
-    margin: 0 10px;
+    margin: 0;
     width: 100%; /* Ensure the clickable area spans full width */
 }
 
 nav ul li a {
-   display: block; /* Makes the link fill the entire list item */
+    display: block; /* Makes the link fill the entire list item */
     padding: 10px 15px; /* Add padding to create clickable area */
     color: #f1f1f1; /* White links */
     text-decoration: none;
@@ -66,7 +66,7 @@ nav ul li a:hover {
 }
 
 .menu-toggle .bar {
-    background-color: #f1f1f1; /* white hamburger lines */
+    background-color: #f1f1f1; /* White hamburger lines */
     height: 3px;
     width: 25px;
     margin: 3px 0;
@@ -83,13 +83,13 @@ section {
 
 /* Links in Content */
 a {
-    color: #888; /* grey links */
+    color: #888; /* Gray links */
     text-decoration: none;
 }
 
 a:hover {
     text-decoration: underline;
-    color: #888; /* Light gray hover */
+    color: #ddd; /* Light gray hover */
 }
 
 /* Footer */
