--- a/partials/header.html
+++ b/partials/header.html
@@ -1,17 +1,19 @@
 <!-- header.html -->
 <nav>
     <div class="logo">
-        <a href="index.html"><img src="path/to/logo.png"></a>
+         <a href="../index.html">
+            <img src="/images/logo.png" alt="OT3 Photography Logo" class="logo-img">
+        </a>
     </div>
     <ul>
-        <li><a href="../about.html">About</a></li>
-        <li><a href="../marine_life.html">Marine Life</a></li>
-        <li><a href="../reptiles.html">Reptiles</a></li>
-        <li><a href="../birds.html">Birds</a></li>
-        <li><a href="../greenery.html">Greenery</a></li>
-        <li><a href="../surfing.html">Surfing</a></li>
-        <li><a href="../volcanoes.html">Volcanoes</a></li>
-        <li><a href="../contact.html">Contact</a></li>
+        <li><a href="/pages/about.html">About</a></li>
+        <li><a href="/pages/marine_life.html">Marine Life</a></li>
+        <li><a href="/pages/reptiles.html">Reptiles</a></li>
+        <li><a href="/pages/birds.html">Birds</a></li>
+        <li><a href="/pages/greenery.html">Greenery</a></li>
+        <li><a href="/pages/surfing.html">Surfing</a></li>
+        <li><a href="/pages/volcanoes.html">Volcanoes</a></li>
+        <li><a href="/pages/contact.html">Contact</a></li>
       
       <!-- Mobile Menu Button -->
     <div class="menu-toggle" id="mobile-menu">
