--- a/partials/header.html
+++ b/partials/header.html
@@ -2,18 +2,18 @@
 <nav>
     <div class="logo">
          <a href="../index.html">
-            <img src="/images/logo.png" alt="OT3 Photography Logo" class="logo-img">
+            <img src="../images/logo.png" alt="OT3 Photography Logo" class="logo-img">
         </a>
     </div>
     <ul>
-        <li><a href="/pages/about.html">About</a></li>
-        <li><a href="/pages/marine_life.html">Marine Life</a></li>
-        <li><a href="/pages/reptiles.html">Reptiles</a></li>
-        <li><a href="/pages/birds.html">Birds</a></li>
-        <li><a href="/pages/greenery.html">Greenery</a></li>
-        <li><a href="/pages/surfing.html">Surfing</a></li>
-        <li><a href="/pages/volcanoes.html">Volcanoes</a></li>
-        <li><a href="/pages/contact.html">Contact</a></li>
+        <li><a href="../pages/about.html">About</a></li>
+        <li><a href="../pages/marine_life.html">Marine Life</a></li>
+        <li><a href="../pages/reptiles.html">Reptiles</a></li>
+        <li><a href="../pages/birds.html">Birds</a></li>
+        <li><a href="../pages/greenery.html">Greenery</a></li>
+        <li><a href="../pages/surfing.html">Surfing</a></li>
+        <li><a href="../pages/volcanoes.html">Volcanoes</a></li>
+        <li><a href="../pages/contact.html">Contact</a></li>
       
       <!-- Mobile Menu Button -->
     <div class="menu-toggle" id="mobile-menu">
