--- a/partials/header.html
+++ b/partials/header.html
@@ -1,10 +1,12 @@
 <!-- header.html -->
 <nav>
     <div class="logo">
-         <a href="../index.html">
+        <a href="../index.html">
             <img src="../images/logo.png" alt="OT3 Photography Logo" class="logo-img">
         </a>
     </div>
+    
+    <!-- Navigation Links -->
     <ul>
         <li><a href="../pages/about.html">About</a></li>
         <li><a href="../pages/marine_life.html">Marine Life</a></li>
@@ -14,8 +16,9 @@
         <li><a href="../pages/surfing.html">Surfing</a></li>
         <li><a href="../pages/volcanoes.html">Volcanoes</a></li>
         <li><a href="../pages/contact.html">Contact</a></li>
-      
-      <!-- Mobile Menu Button -->
+    </ul>
+
+    <!-- Mobile Menu Button -->
     <div class="menu-toggle" id="mobile-menu">
         <span class="bar"></span>
         <span class="bar"></span>
