--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,10 +33,9 @@ nav .logo a {
 }
 
 nav .logo img {
-    width: 15%; /* Set the width as a percentage of the parent container */
+    width: 80px; /* Set the width as a percentage of the parent container */
     height: auto; /* Maintain aspect ratio */
     object-fit: contain; /* Ensures the logo scales properly */
-    transition: transform 0.3s ease; /* Optional: Smooth transition if you want a hover effect */
 }
 
 nav .logo img:hover {
